[tool.poetry]
name = "treelib_ng"
version = "0.1.0"
description = ""
authors = ["Shparki <matt.murray@pnmac.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pydocstyle = "^6.1.1"
coverage = "^5.5"
pylint = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
